--- a/index.css
+++ b/index.css
@@ -1,17 +1,24 @@
-body {
+* {
 	margin: 0;
 	padding: 0;
+	box-sizing: border-box;
+}
+
+body {
 	background-color: #eae7dc;
-	display: flex;
-	flex-direction: column;
-	justify-content: space-evenly;
+}
+
+.container {
+	width: 90%;
+	padding: 3vw 0;
+	margin: 0 auto;
 }
 
 header {
 	display: flex;
 	align-items: center;
 	justify-content: space-between;
-	padding: 0 15vw 0 2vw;
+	padding: 0 15vw 5vw 2vw;
 }
 
 h1 {
@@ -62,110 +69,63 @@ h2 {
 }
 
 .clock-face {
-	width: 30%;
+	width: 35%;
 	height: auto;
-	padding-top: 30%;
+	padding-top: 35%;
 	position: relative;
 	border-radius: 50%;
 	background-color: #d8c3a5;
-	border: 4px solid #8e8d8a;
 }
 
 .center {
 	position: absolute;
 	background-color: black;
-	left: calc(50% - 2px);
-	top: calc(50% - 2px);
-	width: 10px;
-	height: 10px;
+	left: calc(50% - 10px);
+	top: calc(50% - 10px);
+	width: 20px;
+	height: 20px;
 	border-radius: 50%;
-	background-color: #e85a4f;
+	background-color: #606060;
+	z-index: 1;
 }
 
-@media (min-width: 320px) and (max-width: 480px) {
-	h1 {
-		font-size: 8vw;
-	}
-
-	header {
-		display: flex;
-		flex-direction: column;
-		padding: 0;
-	}
-
-	h2 {
-		font-size: 6vw;
-	}
-
-	.clock-face {
-		width: 60%;
-		padding-top: 60%;
-		margin-top: 40px;
-	}
+.hand {
+	border-radius: 4px;
+	background-color: #606060;
+	position: absolute;
+	transform: rotate(90deg);
+	transform-origin: 100%;
 }
 
-@media (min-width: 481px) and (max-width: 767px) {
-	h1 {
-		font-size: 6vw;
-	}
-
-	header {
-		display: flex;
-		flex-direction: column;
-		padding: 0;
-	}
-
-	.clock-face {
-		width: 50%;
-		padding-top: 50%;
-		margin-top: 100px;
-	}
-
-	h2 {
-		font-size: 4vw;
-	}
+.hour-hand {
+	width: 30%;
+	height: 10px;
+	top: calc(50% - 5px);
+	left: 20%;
 }
 
-@media (min-width: 768px) and (max-width: 1024px) {
-	h1 {
-		font-size: 8vw;
-	}
-
-	header {
-		display: flex;
-		justify-content: center;
-	}
-
-	.clock-face {
-		width: 60%;
-		padding-top: 60%;
-		margin-top: 50px;
-	}
-
-	h2 {
-		font-size: 4vw;
-	}
+.minutes-hand {
+	width: 40%;
+	height: 7px;
+	top: calc(50% - 4px);
+	left: 10%;
 }
 
-@media (min-width: 768px) and (max-width: 1024px) and (orientation: landscape) {
-	h1 {
-		font-size: 4vw;
-	}
+.seconds-hand {
+	width: 48%;
+	height: 3px;
+	top: calc(50% - 2px);
+	left: 2%;
+}
 
-	header {
-		display: flex;
-		flex-direction: row;
-		justify-content: space-between;
-		padding: 0 20vw 0 10vw;
-	}
-
-	.clock-face {
-		width: 25%;
-		padding-top: 25%;
-		margin-top: 5vh;
-	}
-
-	h2 {
-		font-size: 3vw;
-	}
+.digital-clock {
+	font-size: 2vw;
+	color: #fff;
+	position: absolute;
+	top: 30%;
+	left: 20%;
+	background-color: #e98074;
+	padding: 3px;
+	border-radius: 4px;
+	box-shadow: inset 0px 2px 5px rgba(0, 0, 0, .4);
 }
